--- a/templates/Loan_Application.html
+++ b/templates/Loan_Application.html
@@ -78,7 +78,7 @@
 
                                 <div class="form-group">
                                     <input name="marital_status" list="married" class="form-control-input" required select>
-                                    <label class="label-control" for="marital_status"> Marital status of the applicant</label>
+                                    <label class="label-control" for="marital_status"> Married or not</label>
                                     <datalist id="married">
                                     <option value="YES">
                                     <option value="NO">                            
@@ -88,7 +88,7 @@
 
                                 <div class="form-group">
                                     <input name="education_status" list="education" class="form-control-input" required select>
-                                    <label class="label-control" for="education_status">Education level of the applicant</label>
+                                    <label class="label-control" for="education_status">Education level of the applicant (high-school)</label>
                                     <datalist id="education">
                                     <option value="GRADUATED">
                                     <option value="NOT GRADUATED">                            
@@ -140,7 +140,7 @@
 
                             <div class="form-group">
                                     <input name="applicantIncome" type="number" min="0" max="100000" class="form-control-input" id="applicantIncome" required>
-                                    <label class="label-control" for="applicantIncome">Applicant Income: The amount of income the applicant earns:</label>
+                                    <label class="label-control" for="applicantIncome">Applicant Income: The amount of income the applicant earns for a year:</label>
                                     <div class="help-block with-errors"></div>
                                 </div>
 
@@ -148,7 +148,7 @@
 
                                 <div class="form-group">
                                     <input name="coapplicantIncome" type="number" min="0" max="100000" class="form-control-input" id="coapplicantIncome" required>
-                                    <label class="label-control" for="coapplicantIncome">Co-applicant Income: The amount of income the co-applicant earns:</label>
+                                    <label class="label-control" for="coapplicantIncome">Co-applicant Income: The amount of income the co-applicant earns for a year:</label>
                                     <div class="help-block with-errors"></div>
                                 </div>
                                 
